 -- slurmctld - do not attempt to relinquish control to self.
 -- openapi/v0.0.37 - Honor kill_on_invalid_dependency as job parameter.
 -- Check max_gres when doing step allocation, fix for regression in rc2.
 -- SPANK plugins are now required to match the current Slurm version, and must
    be recompiled for each new Slurm release.
 -- node_features/helpers - add ExecTime configuration option.

* Changes in Slurm 21.08.0rc2
=============================
 -- Load bf_when_last_cycle from job state only if protocol version >= 21.08.
 -- Docs - remove man3 section entirely.
 -- Enable OCI container execution support as a technical preview.
 -- Set step memory when using MemPerGPU or DefMemPerGPU. Previously a step's
    memory was not set even when it requested --mem-per-gpu and at least one
    GPU.
 -- Add cli_filter.lua support in configless mode.
 -- Remove some of the MAX macro usages with return codes.
 -- Check that the step requests at least as many gres as nodes.
 -- sacct - Add --json and --yaml arguments.
 -- squeue - Add --json and --yaml arguments.
 -- sinfo - Add --json and --yaml arguments.
 -- Make job's SLURM_JOB_GPUS print global GPU IDs instead of MIG unique_ids.
 -- Fix miscounting of GPU envs in prolog/epilog if MultipleFiles was used.
 -- Support MIGs in prolog/epilog's CUDA_VISIBLE_DEVICES & co.
 -- Add SLURM_JOB_GPUS back into Prolog; add it to Epilog.
 -- Fix issue where the original executable, not the bcast'd version, was
    executed with 'srun --bcast'.
 -- Fix memory leaks when cleaning up config_response_msg_t.
 -- sacct - print '-' header correctly for fields over 53-characters wide.
 -- openapi/dbv0.0.37 - replace "REST" with "Slurm OpenAPI" for plugin_name.
 -- openapi/v0.0.37 - replace "REST" with "Slurm OpenAPI" for plugin_name.
 -- configless - fix segfault on 'scontrol reconfigure'.
 -- Fix bad reference to step_ptr->job_ptr after step_ptr is freed.
 -- Fix bad reference to config_for_clients when shutting down slurmctld.